--- a/JavaScript30/JavaScript Drum Kit/style.css
+++ b/JavaScript30/JavaScript Drum Kit/style.css
@@ -1,6 +1,6 @@
 html {
     font-size: 10px;
-    background: url(https://s2.ax1x.com/2019/10/05/urx9qf.jpg) bottom center;
+    background: #ba9f81 url(https://s2.ax1x.com/2019/10/05/urx9qf.jpg) bottom center;
     background-size: cover;
 }
 
@@ -12,7 +12,6 @@ body,html {
 
 .keys {
     display: flex;
-    flex: 1;
     min-height: 100vh;
     align-items: center;
     justify-content: center;
